fix: footer and landing animation fixes
- Animation was not responsive
- Footer icons update
- New icon 'Powered By Ethereum'

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@ body {
     opacity: 1;
 }
 
+.App > .play-button:hover > .play-text {
+    color: white;
+}
+
 .play-button.scroll {
     border-radius: 50%;
     padding: 0 11px;
